# rig

./: Cargo.toml
rig-core/examples/: deepseek_chat.rs  deepseek_code_assistant.rs  deepseek_fim.rs  deepseek_json_mode.rs  deepseek_smart_search.rs
rig-core/src/providers/deepseek/: client.rs  completion.rs  mod.rs
rig-core/src/tool/: mod.rs
rig-core/tests/: deepseek_integration_tests.rs
rig-surrealdb/: CHANGELOG.md  Cargo.toml  README.md
rig-surrealdb/docs/: combined.md
rig-surrealdb/examples/: error_handling_example.rs  hybrid_search_example.rs  update_and_delete_example.rs  vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs  vector_search_with_filters.rs
rig-surrealdb/src/: embedding_model.rs  error.rs  lib.rs  pool.rs  secure_string.rs
rig-surrealdb/src/vector_index/: config.rs  mod.rs  types.rs
rig-surrealdb/tests/: integration_tests.rs  lib.rs  test_filtering.rs  unit.rs
rig-surrealdb/tests/integration/: vector_store.rs
rig-surrealdb/tests/unit/: error.rs
