[package]
name = "rig-surrealdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "SurrealDB implementation of a Rig vector store."
repository = "https://github.com/0xPlaygrounds/rig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "2.1.4", features = ["protocol-ws", "kv-mem", "kv-rocksdb"] }
futures = "0.3.31"
rig-core = { path = "../rig-core", version = "0.6.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["macros"] }
textwrap = { version = "0.16.1"}
term_size = { version = "0.3.2"}
testcontainers = "0.23.1"
tracing-subscriber = "0.3.19"

[[example]]
name = "vector_search_simple"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
